script/kind-session-persistence/tests/gateway-traefikservice-multilevel/service-b-header.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-ts-b-header
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami-ts-b
